<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUpper"
        app:layout_constraintBottom_toTopOf="@+id/toolbarLower">

        <EditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:autofillHints="textInput"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_hint"
            android:textSize="22sp"
            android:inputType="textMultiLine"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textOutput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginStart="4sp"
            android:hint="@string/output_hint"
            android:scrollbars="vertical"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/translateButton"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/aoboshi_one"
        android:text="@string/translate_button"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/toolbarLower"
        app:layout_constraintEnd_toEndOf="@+id/toolbarLower"
        app:layout_constraintTop_toTopOf="@+id/toolbarLower"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarLower" />

    <ImageButton
        android:id="@+id/microphoneButton"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:backgroundTint="@color/button_background"
        android:contentDescription="@string/microphone_button_description"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@id/toolbarUpper"
        app:layout_constraintTop_toTopOf="@+id/toolbarUpper"
        app:layout_constraintBottom_toBottomOf="@id/toolbarUpper"
        app:srcCompat="@drawable/microphone" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:backgroundTint="@color/button_background"
        android:contentDescription="@string/camera_button_description"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@id/toolbarUpper"
        app:layout_constraintTop_toTopOf="@+id/toolbarUpper"
        app:layout_constraintBottom_toBottomOf="@id/toolbarUpper"
        app:srcCompat="@drawable/camera" />

    <ImageButton
        android:id="@+id/speakerButton"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:backgroundTint="@color/button_background"
        android:contentDescription="@string/speaker_button_description"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/toolbarLower"
        app:layout_constraintTop_toTopOf="@+id/toolbarLower"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarLower"
        app:srcCompat="@drawable/speaker" />

    <ImageButton
        android:id="@+id/flashlightButton"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:contentDescription="@string/flashlight_button_description"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/button_background"
        app:layout_constraintEnd_toEndOf="@+id/toolbarLower"
        app:layout_constraintTop_toTopOf="@+id/toolbarLower"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarLower"
        app:srcCompat="@drawable/flashlight_on" />

</androidx.constraintlayout.widget.ConstraintLayout>