<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MyCameraActivity" >

    <org.opencv.android.JavaCameraView
        android:id="@+id/cameraView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        opencv:camera_id="back" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="75sp"
        android:layout_gravity="bottom"
        android:background="@color/black50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="15sp"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <ImageButton
        android:id="@+id/eyeButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/eye_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/eye_opened" />

    <ImageButton
        android:id="@+id/switchCameraButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/switch_camera_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/resource_switch" />

    <ImageButton
        android:id="@+id/flashButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="end|bottom"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/flash_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/flash_on" />

    <ImageButton
        android:id="@+id/statusButton"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_marginBottom="150sp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/status_description"
        android:scaleType="fitCenter"
        android:src="@drawable/flash_off" />

</FrameLayout>